// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserView should render with full props 1`] = `
<Fragment>
  <Panel
    className="user-view__description info"
    contentComponent="div"
    header="Description"
    key="description"
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        >
          <ListDataUserLinks
            className="pull-right"
            id={1}
          />
          <h3>
            Example User
          </h3>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          Username
        </th>
        <td />
      </tr>
      <tr>
        <th>
          Email
        </th>
        <td>
          user@example.com
        </td>
      </tr>
      <tr>
        <th>
          DCI
        </th>
        <td>
          1234567890
        </td>
      </tr>
      <tr>
        <th>
          Roles
        </th>
        <td
          className="user-view__roles"
        >
          <ListLabel
            items={
              Array [
                Object {
                  "id": "admin",
                  "name": "Admin",
                },
                Object {
                  "id": "dm",
                  "name": "Dungeon Master",
                },
                Object {
                  "id": "player",
                  "name": "Player",
                },
              ]
            }
            key="admin"
            value="admin"
          />
          <ListLabel
            items={
              Array [
                Object {
                  "id": "admin",
                  "name": "Admin",
                },
                Object {
                  "id": "dm",
                  "name": "Dungeon Master",
                },
                Object {
                  "id": "player",
                  "name": "Player",
                },
              ]
            }
            key="dm"
            value="dm"
          />
          <ListLabel
            items={
              Array [
                Object {
                  "id": "admin",
                  "name": "Admin",
                },
                Object {
                  "id": "dm",
                  "name": "Dungeon Master",
                },
                Object {
                  "id": "player",
                  "name": "Player",
                },
              ]
            }
            key="player"
            value="player"
          />
        </td>
      </tr>
    </tbody>
  </Panel>
</Fragment>
`;

exports[`UserView should render without props 1`] = `
<Fragment>
  <Panel
    className="user-view__description info"
    contentComponent="div"
    header="Description"
    key="description"
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        >
          <ListDataUserLinks
            className="pull-right"
          />
          <h3 />
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          Username
        </th>
        <td />
      </tr>
      <tr>
        <th>
          Email
        </th>
        <td />
      </tr>
      <tr>
        <th>
          Roles
        </th>
        <td
          className="user-view__roles"
        />
      </tr>
    </tbody>
  </Panel>
</Fragment>
`;
